Fixes broken position-title on speaker page and adds pronouns visibility"

--- a/assets/_scss/_speakers.scss
+++ b/assets/_scss/_speakers.scss
@@ -18,7 +18,6 @@
 }
 
 .speaker-mini {
-  height: 5.2em;
   padding: 0 15px;
 }
 
@@ -39,10 +38,16 @@ p.speaker-session {
   font-weight: 700;
 }
 
-p.speaker-title {
+p.speaker-pronouns,
+p.speaker-title,
+p.speaker-inst {
   font-weight: 400;
   margin-bottom: 0;
   padding: .2em .5em;
+  font-size: 1.1em;
+  line-height: 1.4em;
+  position: relative;
+  z-index: 100;
 }
 
 
@@ -95,12 +100,7 @@ p.speaker-bio:not(:nth-of-type(1)) {
   padding-top: 0;
 }
 
-p.speaker-inst {
-  font-size: 1.1em;
-  line-height: 1.4em;
-  position: relative;
-  z-index: 100;
-}
+
 
 .speaker-info {
   background-color: $speaker-info-bg;
